--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,12 @@
 asgiref==3.7.2
+bleach==6.1.0
 Django==5.0
+django-extensions==3.2.3
+django-filter==23.5
+django-summernote==0.8.20.0
+psycopg2-binary==2.9.9
 python-dotenv==1.0.0
+six==1.16.0
 sqlparse==0.4.4
+typing_extensions==4.8.0
+webencodings==0.5.1
